--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: saim-dairy-farm
     env: node
-    buildCommand: npm install
+    buildCommand: npm install && node init-db.js
     startCommand: npm start
     envVars:
       - key: NODE_ENV
